user-select: none shouldn't affect editability https://bugs.webkit.org/show_bug.cgi?id=118009

Reviewed by Antti Koivisto.

LayoutTests/imported/w3c:

* web-platform-tests/css/css-ui/user-select-none-in-editable-expected.txt: Added.
* web-platform-tests/css/css-ui/user-select-none-in-editable.html: Added.
* web-platform-tests/css/css-ui/user-select-none-on-input-expected.txt: Added.
* web-platform-tests/css/css-ui/user-select-none-on-input.html: Added.

Source/WebCore:

Tests: editing/selection/user-select-js-property.html
       imported/w3c/web-platform-tests/css/css-ui/user-select-none-in-editable.html
       imported/w3c/web-platform-tests/css/css-ui/user-select-none-on-input.html

Change `effectiveUserSelect` to take in account `-webkit-user-modify`.

* rendering/style/RenderStyle.cpp:
(WebCore::RenderStyle::effectiveUserSelect const):
* rendering/style/RenderStyle.h:
(WebCore::RenderStyle::effectiveUserSelect const): Deleted.

LayoutTests:

- Removed tests that were testing old behavior
- Added new tests for new behavior (imported from the Blink codebase)

* editing/selection/4866671.html: Removed.
* editing/selection/5779984-1-expected.txt: Removed.
* editing/selection/5779984-1.html: Removed.
* editing/selection/user-select-js-property-expected.txt: Added.
* editing/selection/user-select-js-property.html: Added.
* platform/gtk/editing/selection/4866671-expected.png: Removed.
* platform/gtk/editing/selection/4866671-expected.txt: Removed.
* platform/ios/TestExpectations:
* platform/ios/editing/selection/4866671-expected.txt: Removed.
* platform/mac/editing/selection/4866671-expected.png: Removed.
* platform/mac/editing/selection/4866671-expected.txt: Removed.
* platform/win/editing/selection/4866671-expected.txt: Removed.
* platform/wincairo/editing/selection/4866671-expected.txt: Removed.

Canonical link: https://commits.webkit.org/249767@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@293028 268f45cc-cd09-0410-ab3c-d52691b4dbfc